...
                    Image(systemName: "tag")
                    Text(labelText)
                }
            }
        )
        .buttonStyle(.plain)
        .accessibilityIdentifier("tagFilterPicker")
        .popover(isPresented: $isPopoverPresented, arrowEdge: .bottom)
        {
            popoverContent
        }
    }

...
